external-crates/move/crates/move-compiler/tests/move_check/verification/cross_module_invalid.exp
error[E03004]: unbound type
   ┌─ tests/move_check/verification/cross_module_invalid.move:22:23
   │
22 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

error[E03006]: unexpected name in this position
   ┌─ tests/move_check/verification/cross_module_invalid.move:23:9
   │
23 │         A::build_foo()
   │         ^^^^^^^^^^^^ Unexpected module identifier. A module identifier is not a valid expression
   │
   = The fully-qualified name is '@A::build_foo'

